public interface IVehicleDatabase
{
    void SaveToDatabase(Vehicle vehicle);
    void LogVehicleInfo(Vehicle vehicle);
}
