public interface IVehiclePricing
{
    decimal CalculateRentalCost(Vehicle vehicle, int days);
}
